--- a/learn-to-code 1.html
+++ b/learn-to-code 1.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Learn to Code 1</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css"> <!-- Ensure the path is correct -->
 </head>
 <body>
     <header>
@@ -38,18 +38,18 @@
         <p>Here are some resources and examples:</p>
 
         <figure>
-            <img src="unit1/picture1.jpg" alt="Picture 1">
+            <img src="unit1/picture1.png" alt="Description of Picture 1">
             <figcaption>Explanation of Picture 1.</figcaption>
         </figure>
 
         <figure>
-            <img src="unit1/picture2.jpg" alt="Picture 2">
+            <img src="unit1/picture2.png" alt="Description of Picture 2">
             <figcaption>Explanation of Picture 2.</figcaption>
         </figure>
 
         <figure>
             <video controls>
-                <source src="unit1/video1.mp4" type="video/mp4">
+                <source src="unit1/video.mov" type="video/quicktime">
                 Your browser does not support the video tag.
             </video>
             <figcaption>Video 1 showing examples of learned concepts.</figcaption>
