--- a/index.html
+++ b/index.html
@@ -3,46 +3,62 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Personal portfolio of [Your Name].">
-    <title>[Your Name] - Portfolio</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Learn to Code 1</title>
+    <link rel="stylesheet" href="styles.css">                                
 </head>
 <body>
     <header>
-        <h1>[Your Name]'s Portfolio</h1>
+        <h1>Learn to Code 1</h1>
     </header>
+
     <nav>
         <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <!-- Add more menu items here if needed -->
+            <li><a href="learn-to-code-1.html">Learn to Code 1</a></li>
+            <li><a href="unit.html">Unit 1</a></li> <!-- New menu item -->
+            <li><a href="#about">About</a></li>
+            <li><a href="#projects">Projects</a></li>
+            <li><a href="#contact">Contact</a></li>
         </ul>
     </nav>
-    <main>
-        <section class="intro">
-            <h2>Welcome to My Portfolio</h2>
-            <p>Hi! I'm [Your Name], and this is my portfolio. Here you'll find information about my work, projects, and a little about me.</p>
-        </section>
-        <section class="profile">
-            <img src="images/profile.jpg" alt="Profile Picture of [Your Name]">
-        </section>
-        <section class="purpose">
-            <h2>Purpose of This Portfolio</h2>
-            <p>The purpose of this portfolio is to showcase my skills, projects, and achievements. It serves as a comprehensive overview of my professional work and personal interests.</p>
-        </section>
-        <section class="about-me">
-            <h2>About Me</h2>
-            <p>Here are a few things about me:</p>
-            <ul>
-                <li>I am passionate about [your interests].</li>
-                <li>I have experience in [your skills/technologies].</li>
-                <li>I enjoy working on [types of projects you like].</li>
-                <!-- Add more items as needed -->
-            </ul>
-        </section>
-    </main>
+
+    <section id="learn-to-code">
+        <h2>What I Learned</h2>
+        <p>In this section, I learned about various fundamental programming concepts, including:</p>
+        <ul>
+            <li>Commands</li>
+            <li>For Loops</li>
+            <li>Conditionals</li>
+            <li>Logical Operators</li>
+            <li>Variables</li>
+            <li>Types</li>
+            <li>Initialization</li>
+            <li>Functions</li>
+            <li>Parameters</li>
+        </ul>
+        <p>Here are some resources and examples:</p>
+
+        <figure>
+            <img src="unit1/picture1.jpg" alt="Picture 1">
+            <figcaption>Explanation of Picture 1.</figcaption>
+        </figure>
+
+        <figure>
+            <img src="unit1/picture2.jpg" alt="Picture 2">
+            <figcaption>Explanation of Picture 2.</figcaption>
+        </figure>
+
+        <figure>
+            <video controls>
+                <source src="unit1/video1.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+            </video>
+            <figcaption>Video 1 showing examples of learned concepts.</figcaption>
+        </figure>
+    </section>
+
     <footer>
-        <p>&copy; 2024 [Your Name]. All rights reserved.</p>
+        <p>&copy; 2024 Lea Kim. All rights reserved.</p>
     </footer>
 </body>
 </html>
