--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <p>Here are some resources and examples:</p>
 
         <figure>
-            <img src="unit1/picture1.jpg" alt="Picture 1">
+            <img src="unit 1/picture1.png   " alt="Picture 1">
             <figcaption>Explanation of Picture 1.</figcaption>
         </figure>
 
