--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <p>Here are some resources and examples:</p>
 
         <figure>
-            <img src="unit 1/picture1.png   " alt="Picture 1">
+            <img src="unit 1/picture1.png" alt="Picture 1" style="width:500px;height:600px;">
             <figcaption>Explanation of Picture 1.</figcaption>
         </figure>
 
