--- a/unit.html
+++ b/unit.html
@@ -32,6 +32,11 @@
         </figure>
 
         <figure>
+            <img src="unit1/picture2.png" alt="Picture 2">
+            <figcaption>Picture 1 illustrating a key concept in our unit.</figcaption>
+        </figure>
+
+        <figure>
             <video controls>
                 <source src="unit1/vedio1.mov" type="video/quicktime">
                 Your browser does not support the video tag.
