--- a/unit.html
+++ b/unit.html
@@ -32,7 +32,7 @@
         </figure>
 
         <figure>
-            <img src="unit1/picture2.png" alt="Picture 2">
+            <img src="picture2.png/picture2.png" alt="Picture 2">
             <figcaption>Picture 1 illustrating a key concept in our unit.</figcaption>
         </figure>
 
