--- a/unit.html
+++ b/unit.html
@@ -32,7 +32,7 @@
         </figure>
 
         <figure>
-            <img src="unit 1/" alt="Picture 2">
+            <img src="unit 1/picture1.png" alt="Picture 2">
             <figcaption>Picture 1 illustrating a key concept in our unit.</figcaption>
         </figure>
 
