--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </figure>
 
         <figure>
-            <img src="unit 1/picture2.jpg" alt="Picture 2">
+            <img src="unit 1/picture2.png/picture2.png" alt="Picture 2">
             <figcaption>Explanation of Picture 2.</figcaption>
         </figure>
 
