--- a/learn-to-code.html
+++ b/learn-to-code.html
@@ -91,7 +91,7 @@
             <img src="unit 1/picture2.png" alt="Screenshot 1">
             <img src="unit 1/picture1.png" alt="Screenshot 2">
             <video controls>
-                <source src="unit 1/Video1.mov" type="video/quicktime">
+                <source src="unit 1/Vedio 1.mov" type="video/mov">
                 Your browser does not support the video element.
             </video>
         </div>
