--- a/learn-to-code.html
+++ b/learn-to-code.html
@@ -91,8 +91,8 @@
             <img src="unit 1/picture2.png" alt="Screenshot 1">
             <img src="unit 1/picture1.png" alt="Screenshot 2">
             <video controls>
-                <source src="unit 1/Vedio 1.mov" type="video/mov">
-                Your browser does not support the video element.
+                <source src="unit 1/Vedio 1.mov" type="video/quicktime">
+                Your browser does not support the video tag.
             </video>
         </div>
     </div>
