--- a/index.html
+++ b/index.html
@@ -83,10 +83,13 @@
             <img src="Quokka.jpeg" alt="Professional Picture">
             <h2>VHHS Freshmen interested in animals</h2>
         </div>
-
+        
         <nav>
+            <a href="index.html">Home</a>
             <a href="learn-to-code.html">Learn to Code 1</a>
+            <a href="web-development-basics.html">Web Development Basics</a> <!-- New link added here -->
         </nav>
+        
 
         <div class="content">
             <h3>Hobbies and Interests</h3>
