--- a/learn-to-code.html
+++ b/learn-to-code.html
@@ -72,7 +72,10 @@
     <div class="container">
         <nav>
             <a href="index.html">Home</a>
+            <a href="learn-to-code.html">Learn to Code 1</a>
+            <a href="web-development-basics.html">Web Development Basics</a> <!-- New link added here -->
         </nav>
+        
 
         <div class="content">
             <h3>Topics Covered</h3>
