--- a/web-development-basics.html
+++ b/web-development-basics.html
@@ -80,13 +80,15 @@
         <div class="content">
             <h3>Topics Covered</h3>
             <ul>
-                <li><strong>HTML:</strong> Structure of web pages.</li>
-                <li><strong>CSS:</strong> Styling web pages.</li>
-                <li><strong>JavaScript:</strong> Adding interactivity to web pages.</li>
-                <li><strong>Responsive Design:</strong> Making web pages look good on all devices.</li>
-                <li><strong>Web Hosting:</strong> Storing your website on a server.</li>
-                <li><strong>SEO:</strong> Optimizing for search engines.</li>
+                <li><strong>Variables:</strong> Storing data for use in programs.</li>
+                <li><strong>Types:</strong> Different kinds of data (e.g., integers, strings).</li>
+                <li><strong>Initialization:</strong> Setting up variables before use.</li>
+                <li><strong>Parameters:</strong> Values passed into functions to customize their behavior.</li>
+                <li><strong>World Building:</strong> Creating environments or scenarios in code.</li>
+                <li><strong>Arrays:</strong> Collections of data stored in a single variable.</li>
             </ul>
+            
+            
 
             <img src="unit2/picture1.png" alt="HTML Example">
             <img src="unit2/picture2.png" alt="CSS Example">
