--- a/web-development-basics.html
+++ b/web-development-basics.html
@@ -93,7 +93,7 @@
             <img src="unit2/picture1.png" alt="HTML Example">
             <img src="unit2/picture2.png" alt="CSS Example">
             <video controls>
-                <source src="unit2/video1.mp4" type="video/mp4">
+                <source src="unit2/video1.mov" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
         </div>
