--- a/keep-going-with-apps.html
+++ b/keep-going-with-apps.html
@@ -88,10 +88,10 @@
                 <li><strong>Deployment:</strong> Launching the app for users to access and download.</li>
             </ul>
 
-            <img src="unit 2/picture1.png" alt="Screenshot 1">
-            <img src="unit 2/picture2.png" alt="Screenshot 2">
+            <img src="unit 2/ picture4.png" alt="Screenshot 1">
+            <img src="picture3.png" alt="Screenshot 2">
             <video controls>
-                <source src="unit 2/video1.mov" type="video/quicktime">
+                <source src="unit 1/video2.mov" type="video/quicktime">
                 Your browser does not support the video tag.
             </video>
         </div>
