--- a/keep-going-with-apps.html
+++ b/keep-going-with-apps.html
@@ -91,7 +91,7 @@
             <img src="unit 2/ picture4.png" alt="Screenshot 1">
             <img src="picture3.png" alt="Screenshot 2">
             <video controls>
-                <source src="unit 1/video2.mov" type="video/quicktime">
+                <source src="video2.mov" type="video/quicktime">
                 Your browser does not support the video tag.
             </video>
         </div>
