--- a/keep-going-with-apps.html
+++ b/keep-going-with-apps.html
@@ -88,8 +88,8 @@
                 <li><strong>Deployment:</strong> Launching the app for users to access and download.</li>
             </ul>
 
-            <img src="unit 2/ picture4.png" alt="Screenshot 1">
-            <img src="unit 2/picture3.png" alt="Screenshot 2">
+            <img src="picture4.png" alt="Screenshot 1">
+            <img src="picture3.png" alt="Screenshot 2">
             <video controls>
                 <source src="video2.mov" type="video/quicktime">
                 Your browser does not support the video tag.
