--- a/index.html
+++ b/index.html
@@ -89,6 +89,8 @@
             <a href="learn-to-code.html">Learn to Code 1</a>
             <a href="web-development-basics.html">Web Development Basics</a> <!-- New link added here -->
             <a href="keep-going-with-apps.html">Keep Going with Apps</a> <!-- New link added here -->
+            <a href="about-me.html">Keep Going with Apps</a> <!-- New link added here -->
+
 
         </nav>
         
