--- a/about-me.html
+++ b/about-me.html
@@ -128,8 +128,10 @@
         
         <div class="video-gallery">
             <h3>Video Gallery</h3>
-            <iframe src="https://www.youtube.com/embed/videoID1" frameborder="0" allowfullscreen></iframe>
-            <iframe src="https://www.youtube.com/embed/videoID2" frameborder="0" allowfullscreen></iframe>
+            <img src="https://www.youtube.com/embed/videoID1" frameborder="0" allowfullscreen></iframe>
+            <img src="https://www.youtube.com/embed/videoID2" frameborder="0" allowfullscreen></iframe>
+            <video controls>
+            <source src="video3.mov" type="video/quicktime">
             <!-- Add more videos as needed -->
         </div>
     </div>
