--- a/rockpaperscissors.html
+++ b/rockpaperscissors.html
@@ -100,11 +100,11 @@
                 <li>Perfect for Quick Decisions</li>
             </ul>
             <h3>Images</h3>
-            <img src="your-image-url-2.jpg" alt="Rock" style="width: 200px; margin: 10px;">
-            <img src="your-image-url-3.jpg" alt="Paper" style="width: 200px; margin: 10px;">
+            <img src="picture7.png" alt="Rock" style="width: 200px; margin: 10px;">
+            <img src="picture8.png" alt="Paper" style="width: 200px; margin: 10px;">
             <h3>Watch a Video</h3>
             <video width="320" height="240" controls>
-                <source src="your-video-url.mp4" type="video/mp4">
+                <source src="video4.mov" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
         </div>
