--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
             <a href="web-development-basics.html">Web Development Basics</a> <!-- New link added here -->
             <a href="keep-going-with-apps.html">Keep Going with Apps</a> <!-- New link added here -->
             <a href="about-me.html">About Me</a> <!-- New link added here -->
+            <a href="rock-paper-scissors.html">Rock, Paper, Scissors</a> <!-- New link added here -->
 
 
         </nav>
