--- a/cookieClicker.html
+++ b/cookieClicker.html
@@ -77,3 +77,18 @@
         <nav>
             <a href="index.html">Home</a>
    
+            <nav>
+                <a href="index.html">Home</a>
+                <a href="learn-to-code.html">Learn to Code 1</a>
+                <a href="web-development-basics.html">Web Development Basics</a> <!-- New link added here -->
+                <a href="keep-going-with-apps.html">Keep Going with Apps</a> <!-- New link added here -->
+                <a href="about-me.html">About Me</a> <!-- New link added here -->
+                <a href="rock-paper-scissors.html">Rock, Paper, Scissors</a> <!-- New link added here -->
+                <a href="cookieClicker.html">cookieClicker</a> <!-- New link added here -->
+    
+
+                <div class="footer">
+                    <p>&copy; 2024 LEA KIM</p>
+                </div>
+            </body>
+            </html>
