--- a/cookieClicker.html
+++ b/cookieClicker.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cookie Clicker</title>
+    <title>Cookie Clicker - LEA KIM Portfolio</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -29,18 +29,8 @@
         .content {
             margin: 2em 0;
         }
-        .image-gallery {
-            display: flex;
-            justify-content: space-between;
-            margin: 20px 0;
-        }
-        .image-gallery img {
-            width: 48%; /* Adjust width as needed */
-            border-radius: 8px;
-        }
-        .video-container {
-            margin: 20px 0;
-            text-align: center;
+        .content h2 {
+            margin-top: 0;
         }
         .footer {
             background-color: #333;
@@ -72,23 +62,40 @@
     <header>
         <h1>Cookie Clicker</h1>
     </header>
-    
+
     <div class="container">
         <nav>
-            <a href="index.html">Home</a>
-   
-            <nav>
-                <a href="index.html">Home</a>
-                <a href="learn-to-code.html">Learn to Code 1</a>
-                <a href="web-development-basics.html">Web Development Basics</a> <!-- New link added here -->
-                <a href="keep-going-with-apps.html">Keep Going with Apps</a> <!-- New link added here -->
-                <a href="about-me.html">About Me</a> <!-- New link added here -->
-                <a href="rock-paper-scissors.html">Rock, Paper, Scissors</a> <!-- New link added here -->
-                <a href="cookieClicker.html">cookieClicker</a> <!-- New link added here -->
-    
+            <a href="index.html">Home</a> <!-- Link to the new page -->
+            <a href="learn-to-code.html">Learn to Code 1</a> <!-- Link to the new page -->
+            <a href="web-development-basics.html">Web Development Basics</a> <!-- Link to the new page -->
+            <a href="keep-going-with-apps.html">Keep Going with Apps</a> <!-- Link to the new page -->
+            <a href="about-me.html">About Me</a> <!-- Link to the new page -->
+            <a href="rock-paper-scissors.html">Rock, Paper, Scissors</a> <!-- Link to the new page -->
+            <a href="cookieClicker.html">Cookie Clicker</a> <!-- Link to the new page -->
+        </nav>
 
-                <div class="footer">
-                    <p>&copy; 2024 LEA KIM</p>
-                </div>
-            </body>
-            </html>
+        <div class="content">
+            <h2>About Cookie Clicker</h2>
+            <p>Cookie Clicker is a popular incremental game where players click on a giant cookie to earn cookies. The more cookies you earn, the more upgrades and buildings you can buy to automate cookie production.</p>
+
+            <h3>Gameplay</h3>
+            <p>Players start by clicking on the cookie, earning one cookie per click. As they accumulate cookies, they can purchase upgrades and buildings that generate cookies automatically. The goal is to produce as many cookies as possible, unlocking achievements and milestones along the way.</p>
+
+            <h3>Features</h3>
+            <ul>
+                <li>Simple yet addictive gameplay</li>
+                <li>Various upgrades and buildings</li>
+                <li>Achievements and milestones to track progress</li>
+                <li>Fun and engaging graphics</li>
+            </ul>
+
+            <h3>Why I Love Cookie Clicker</h3>
+            <p>Cookie Clicker combines strategy, planning, and a bit of luck. It's a great way to unwind while still engaging your mind. The satisfaction of watching your cookie empire grow is incredibly rewarding!</p>
+        </div>
+    </div>
+
+    <div class="footer">
+        <p>&copy; 2024 LEA KIM</p>
+    </div>
+</body>
+</html>
