--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LEA KIM - Portfolio</title>
+    <title>LEA KIM - Cookie Clicker</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -70,11 +71,22 @@
         nav a:hover {
             background-color: #bbb;
         }
+        .gallery img {
+            width: 100%;
+            max-width: 300px;
+            margin: 10px;
+        }
+        video {
+            width: 100%;
+            max-width: 600px;
+            display: block;
+            margin: 20px auto;
+        }
     </style>
 </head>
 <body>
     <header>
-        <h1>LEA KIM</h1>
+        <h1>LEA KIM - Cookie Clicker</h1>
     </header>
     
     <div class="container">
@@ -86,26 +98,28 @@
         <nav>
             <a href="index.html">Home</a>
             <a href="learn-to-code.html">Learn to Code 1</a>
-            <a href="web-development-basics.html">Web Development Basics</a> <!-- New link added here -->
-            <a href="keep-going-with-apps.html">Keep Going with Apps</a> <!-- New link added here -->
-            <a href="about-me.html">About Me</a> <!-- New link added here -->
-            <a href="rock-paper-scissors.html">Rock, Paper, Scissors</a> <!-- New link added here -->
-            <a href="cookieClicker.html">Cookie Clicker</a> <!-- Link to the new page -->
-
-
+            <a href="web-development-basics.html">Web Development Basics</a>
+            <a href="keep-going-with-apps.html">Keep Going with Apps</a>
+            <a href="about-me.html">About Me</a>
+            <a href="rock-paper-scissors.html">Rock, Paper, Scissors</a>
+            <a href="cookieClicker.html">Cookie Clicker</a>
         </nav>
-        
 
         <div class="content">
-            <h3>Hobbies and Interests</h3>
-            <ul>
-                <li>iPad drawing</li>
-                <li>Playing with my dog</li>
-            </ul>
-            <audio controls>
-                <source src="voice.mp3" type="audio/mp3">
-                Your browser does not support the audio element.
-            </audio>
+            <h3>About Cookie Clicker</h3>
+            <p>Cookie Clicker is a popular incremental game where players click on a giant cookie to earn cookies. The more cookies you earn, the more upgrades and buildings you can buy to automate cookie production.</p>
+
+            <h3>Gallery</h3>
+            <div class="gallery">
+                <img src="picture9.jpg" alt="Description of Picture 9">
+                <img src="picture10.jpg" alt="Description of Picture 10">
+            </div>
+
+            <h3>Video Tutorial</h3>
+            <video controls>
+                <source src="video5.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+            </video>
         </div>
     </div>
 
