--- a/index.html
+++ b/index.html
@@ -111,13 +111,13 @@
 
             <h3>Gallery</h3>
             <div class="gallery">
-                <img src="picture9.jpg" alt="Description of Picture 9">
-                <img src="picture10.jpg" alt="Description of Picture 10">
+                <img src="picture9.png" alt="Description of Picture 9">
+                <img src="picture10.png" alt="Description of Picture 10">
             </div>
 
             <h3>Video Tutorial</h3>
             <video controls>
-                <source src="video5.mp4" type="video/mp4">
+                <source src="video5.mov" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
         </div>
