--- a/cookieClicker.html
+++ b/cookieClicker.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cookie Clicker - LEA KIM Portfolio</title>
+    <title>LEA KIM - Cookie Clicker</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -26,11 +26,26 @@
             margin: auto;
             overflow: hidden;
         }
+        .profile {
+            text-align: center;
+            margin-top: 2em;
+        }
+        .profile img {
+            border-radius: 50%;
+            width: 150px;
+            height: 150px;
+        }
         .content {
             margin: 2em 0;
         }
-        .content h2 {
-            margin-top: 0;
+        .content ul {
+            list-style: none;
+            padding: 0;
+        }
+        .content ul li {
+            background-color: #eee;
+            margin: 5px 0;
+            padding: 10px;
         }
         .footer {
             background-color: #333;
@@ -56,41 +71,55 @@
         nav a:hover {
             background-color: #bbb;
         }
+        .gallery img {
+            width: 100%;
+            max-width: 300px;
+            margin: 10px;
+        }
+        video {
+            width: 100%;
+            max-width: 600px;
+            display: block;
+            margin: 20px auto;
+        }
     </style>
 </head>
 <body>
     <header>
-        <h1>Cookie Clicker</h1>
+        <h1>LEA KIM - Cookie Clicker</h1>
     </header>
-
+    
     <div class="container">
+        <div class="profile">
+            <img src="Quokka.jpeg" alt="Professional Picture">
+            <h2>VHHS Freshmen interested in animals</h2>
+        </div>
+        
         <nav>
-            <a href="index.html">Home</a> <!-- Link to the new page -->
-            <a href="learn-to-code.html">Learn to Code 1</a> <!-- Link to the new page -->
-            <a href="web-development-basics.html">Web Development Basics</a> <!-- Link to the new page -->
-            <a href="keep-going-with-apps.html">Keep Going with Apps</a> <!-- Link to the new page -->
-            <a href="about-me.html">About Me</a> <!-- Link to the new page -->
-            <a href="rock-paper-scissors.html">Rock, Paper, Scissors</a> <!-- Link to the new page -->
-            <a href="cookieClicker.html">Cookie Clicker</a> <!-- Link to the new page -->
+            <a href="index.html">Home</a>
+            <a href="learn-to-code.html">Learn to Code 1</a>
+            <a href="web-development-basics.html">Web Development Basics</a>
+            <a href="keep-going-with-apps.html">Keep Going with Apps</a>
+            <a href="about-me.html">About Me</a>
+            <a href="rock-paper-scissors.html">Rock, Paper, Scissors</a>
+            <a href="cookieClicker.html">Cookie Clicker</a>
         </nav>
 
         <div class="content">
-            <h2>About Cookie Clicker</h2>
+            <h3>About Cookie Clicker</h3>
             <p>Cookie Clicker is a popular incremental game where players click on a giant cookie to earn cookies. The more cookies you earn, the more upgrades and buildings you can buy to automate cookie production.</p>
 
-            <h3>Gameplay</h3>
-            <p>Players start by clicking on the cookie, earning one cookie per click. As they accumulate cookies, they can purchase upgrades and buildings that generate cookies automatically. The goal is to produce as many cookies as possible, unlocking achievements and milestones along the way.</p>
+            <h3>Gallery</h3>
+            <div class="gallery">
+                <img src="picture9.png" alt="Description of Picture 9">
+                <img src="picture10.png" alt="Description of Picture 10">
+            </div>
 
-            <h3>Features</h3>
-            <ul>
-                <li>Simple yet addictive gameplay</li>
-                <li>Various upgrades and buildings</li>
-                <li>Achievements and milestones to track progress</li>
-                <li>Fun and engaging graphics</li>
-            </ul>
-
-            <h3>Why I Love Cookie Clicker</h3>
-            <p>Cookie Clicker combines strategy, planning, and a bit of luck. It's a great way to unwind while still engaging your mind. The satisfaction of watching your cookie empire grow is incredibly rewarding!</p>
+            <h3>Video Tutorial</h3>
+            <video controls>
+                <source src="video5.mov" type="video/mov>
+                Your browser does not support the video tag.
+            </video>
         </div>
     </div>
 
