--- a/unit2/Login.html
+++ b/unit2/Login.html
@@ -100,8 +100,8 @@
         
         <!-- Display images and video here -->
         <div class="media-container">
-            <img src="picture-4.img" alt="Picture 4">
-            <img src="picture-5.img" alt="Picture 5">
+            <img src="picture-4.png" alt="Picture 4">
+            <img src="picture-5.png" alt="Picture 5">
             <video controls>
                 <source src="video-2.mov" type="video/mov">
                 Your browser does not support the video element.
@@ -114,3 +114,11 @@
     </div>
 </body>
 </html>
+<nav>
+    <a href="index.html">Home</a>
+    <a href="learn-to-code.html">Learn to Code 1</a>
+    <a href="web-development-basics.html">Web Development Basics</a>
+    <a href="keep-going-with-apps.html">Keep Going with Apps</a>
+    <a href="about-me.html">About Me</a>
+    <a href="rock-paper-scissors.html">Rock, Paper, Scissors</a>
+    <a href="Login.html">Cookie Clicker</a>
