--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             <a href="rock-paper-scissors.html">Rock, Paper, Scissors</a> <!-- New link added here -->
             <a href="cookieClicker.html">cookie Clicker</a> <!-- New link added here -->
             <a href="Login.html">Login</a> <!-- New link added here -->
-            <a href="Selling-App.html">Login</a> <!-- New link added here -->
+            <a href="Selling-App.html">Selling-App</a> <!-- New link added here -->
 
 
 
