--- a/cookieClicker.html
+++ b/cookieClicker.html
@@ -116,8 +116,10 @@
             </div>
 
             <h3>Video Tutorial</h3>
-            <video controls>
-                <source src="video5.mov" type="video/mov>
+           
+
+            <video width="320" height="240" controls>
+                <source src="video5.mov" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
         </div>
