--- a/cookieClicker.html
+++ b/cookieClicker.html
@@ -115,7 +115,7 @@
                 <img src="picture10.png" alt="Description of Picture 10">
             </div>
 
-            <h3>Video Tutorial</h3>
+            <h3>Video Tutorial:</h3>
            
 
             <video width="320" height="240" controls>
