--- a/unit2/Login.html
+++ b/unit2/Login.html
@@ -100,10 +100,10 @@
         
         <!-- Display images and video here -->
         <div class="media-container">
-            <img src="picture-4.png" alt="Picture 4">
-            <img src="picture-5.png" alt="Picture 5">
+            <img src="Login1.png" alt="Picture 4">
+            <img src="Login2.png" alt="Picture 5">
             <video controls>
-                <source src="video-2.mov" type="video/mov">
+                <source src="Login-video.mov" type="video/mov">
                 Your browser does not support the video element.
             </video>
         </div>
