--- a/unit2/Selling-App.html
+++ b/unit2/Selling-App.html
@@ -137,7 +137,7 @@ override func prepare(for segue: UIStoryboardSegue, sender: Any?) {
         
         <div class="video-gallery">
             <h3>Video Gallery</h3>
-            <iframe src="video-1.mov" frameborder="0" allowfullscreen></iframe>
+            <iframe src="Selling-App-video.mov" frameborder="0" allowfullscreen></iframe>
             <!-- Add more videos as needed -->
         </div>
         
