--- a/unit2/Login.html
+++ b/unit2/Login.html
@@ -76,9 +76,29 @@
             margin-top: 20px;
             border-radius: 8px;
         }
+
+        /* Responsive design for smaller screens */
+        @media (max-width: 768px) {
+            .container {
+                width: 80%;
+            }
+        }
     </style>
 </head>
 <body>
+
+    <!-- Navigation Bar -->
+    <nav>
+        <a href="index.html">Home</a>
+        <a href="learn-to-code.html">Learn to Code 1</a>
+        <a href="web-development-basics.html">Web Development Basics</a>
+        <a href="keep-going-with-apps.html">Keep Going with Apps</a>
+        <a href="about-me.html">About Me</a>
+        <a href="rock-paper-scissors.html">Rock, Paper, Scissors</a>
+        <a href="Login.html">Cookie Clicker</a>
+    </nav>
+
+    <!-- Header Section -->
     <header>
         <h1>Login - LEA KIM Portfolio</h1>
     </header>
@@ -86,7 +106,7 @@
     <div class="container">
         <h2>Login to your account</h2>
         
-        <div class="Login">
+        <div class="login-form">
             <form action="#" method="post">
                 <label for="username">Username:</label>
                 <input type="text" id="username" name="username" required>
@@ -114,11 +134,3 @@
     </div>
 </body>
 </html>
-<nav>
-    <a href="index.html">Home</a>
-    <a href="learn-to-code.html">Learn to Code 1</a>
-    <a href="web-development-basics.html">Web Development Basics</a>
-    <a href="keep-going-with-apps.html">Keep Going with Apps</a>
-    <a href="about-me.html">About Me</a>
-    <a href="rock-paper-scissors.html">Rock, Paper, Scissors</a>
-    <a href="Login.html">Cookie Clicker</a>
