--- a/index.html
+++ b/index.html
@@ -87,10 +87,9 @@
         <nav>
             <a href="index.html">Home</a>
             <a href="learn-to-code.html">Learn to Code 1</a>
-            <a href="web-development-basics.html">Web Development Basics</a> <!-- New link added here -->
-            <a href="keep-going-with-apps.html">Keep Going with Apps</a> <!-- New link added here -->
+            <a href="web-development-basics.html">Web Dev</a> <!-- New link added here -->
+            <a href="keep-going-with-apps.html">First Apps</a> <!-- New link added here -->
             <a href="about-me.html">About Me</a> <!-- New link added here -->
-            <a href="rock-paper-scissors.html">Rock, Paper, Scissors</a> <!-- New link added here -->
             <a href="rock-paper-scissors.html">Rock, Paper, Scissors</a> <!-- New link added here -->
             <a href="cookieClicker.html">cookie Clicker</a> <!-- New link added here -->
             <a href="Login.html">Login</a> <!-- New link added here -->
