--- a/Selling-App.html
+++ b/Selling-App.html
@@ -129,9 +129,9 @@ override func prepare(for segue: UIStoryboardSegue, sender: Any?) {
 
             <h3>Screenshot of the Selling-App</h3>
             <p>Here is a screenshot of how the app looks when the user interacts with the stepper to adjust the quantity and see the real-time total cost.</p>
-            <img src="picture-1.png".jpg" alt="Screenshot 1">
-            <img src="picture-2.png".jpg" alt="Screenshot 2">
-            <img src="picture-3.png".jpg" alt="Screenshot 3">
+            <img src="Selling-App1.png".jpg" alt="Screenshot 1">
+            <img src="Selling-App2.png".jpg" alt="Screenshot 2">
+            <img src="Seeling-App3.png".jpg" alt="Screenshot 3">
 
         </div>
         
