--- a/Selling-App.html
+++ b/Selling-App.html
@@ -1,23 +1,84 @@
-/* Image gallery styles */
-.image-gallery {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 20px;
-    justify-content: center;
-}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>App Gallery</title>
+    <style>
+        /* General layout */
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+        }
+        
+        .container {
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 20px;
+        }
 
-.image-gallery img {
-    max-width: 100%;  /* Makes the images responsive */
-    width: 300px; /* You can adjust this value to set the image's base width */
-    height: auto; /* Maintain aspect ratio */
-    border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    object-fit: cover; /* Ensures the image maintains its aspect ratio */
-}
+        /* Image gallery styles */
+        .image-gallery {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 20px;
+            justify-content: center;
+        }
 
-@media (max-width: 768px) {
-    .image-gallery img {
-        width: 100%; /* Make images take full width on smaller screens */
-        max-width: 300px; /* Ensure images don't grow too large */
-    }
-}
+        .image-gallery img {
+            max-width: 100%;  /* Makes the images responsive */
+            width: 300px;     /* You can adjust this value to set the image's base width */
+            height: auto;     /* Maintain aspect ratio */
+            border-radius: 8px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            object-fit: cover; /* Ensures the image maintains its aspect ratio */
+        }
+
+        @media (max-width: 768px) {
+            .image-gallery img {
+                width: 100%;    /* Make images take full width on smaller screens */
+                max-width: 300px; /* Ensure images don't grow too large */
+            }
+        }
+
+        /* Video gallery styles */
+        .video-gallery {
+            text-align: center;
+            margin-top: 40px;
+        }
+
+        .video-gallery iframe {
+            width: 100%;
+            max-width: 720px;
+            height: 400px;
+            border: none;
+            border-radius: 8px;
+        }
+
+        h3 {
+            font-size: 24px;
+            margin-bottom: 20px;
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <!-- Image Gallery Section -->
+        <div class="image-gallery">
+            <h3>Image Gallery</h3>
+            <img src="Selling-App1.png" alt="Screenshot 1">
+            <img src="Selling-App2.png" alt="Screenshot 2">
+            <img src="Selling-App3.png" alt="Screenshot 3">
+        </div>
+        
+        <!-- Video Gallery Section -->
+        <div class="video-gallery">
+            <h3>Video Gallery</h3>
+            <!-- Example video (You can replace with your actual video link) -->
+            <iframe src="Selling-App-video.mov" allowfullscreen></iframe>
+        </div>
+    </div>
+</body>
+</html>
