--- a/Selling-App.html
+++ b/Selling-App.html
@@ -82,3 +82,15 @@
     </div>
 </body>
 </html>
+
+<nav>
+    <a href="index.html">Home</a>
+    <a href="learn-to-code.html">Learn to Code 1</a>
+    <a href="web-development-basics.html">Web Development Basics</a>
+    <a href="keep-going-with-apps.html">Keep Going with Apps</a>
+    <a href="about-me.html">About Me</a>
+    <a href="rock-paper-scissors.html">Rock, Paper, Scissors</a>
+    <a href="cookieClicker.html">Cookie Clicker</a>
+    <a href="Selling-App.html">Selling-App</a>
+
+</nav>
