delete wrong letter

--- a/unit2/Login.html
+++ b/unit2/Login.html
@@ -95,7 +95,7 @@
         <a href="keep-going-with-apps.html">Keep Going with Apps</a>
         <a href="about-me.html">About Me</a>
         <a href="rock-paper-scissors.html">Rock, Paper, Scissors</a>
-        <a href="Login.html">Loginr</a>
+        <a href="Login.html">Login</a>
     </nav>
 
     <!-- Header Section -->
