--- a/index.html
+++ b/index.html
@@ -94,6 +94,8 @@
             <a href="cookieClicker.html">cookie Clicker</a> <!-- New link added here -->
             <a href="Login.html">Login</a> <!-- New link added here -->
             <a href="Selling-App.html">Selling-App</a> <!-- New link added here -->
+            <a href="Weather-App.html">Weather-App/a> <!-- New link added here -->
+
 
 
 
