--- a/Weather-App-week2.html
+++ b/Weather-App-week2.html
@@ -4,14 +4,14 @@
 
     <!-- Image: Weather App Picture 2 -->
     <figure>
-        <img src="images/Weather-App-picture2.png" alt="UI Components for Weather App" width="600">
+        <img src="Weather-App-picture2.png" alt="UI Components for Weather App" width="600">
         <figcaption>Weather App UI Components</figcaption>
     </figure>
 
     <!-- Video: Weather App Demo 2 -->
     <figure>
         <video width="600" controls>
-            <source src="videos/Weather-App-video2.mov" type="video/mp4">
+            <source src="Weather-App-video2.mov" type="video/mp4">
             Your browser does not support the video tag.
         </video>
         <figcaption>Weather App Demo: Core Features</figcaption>
