--- a/Weather-App.html
+++ b/Weather-App.html
@@ -104,6 +104,16 @@
             <h2>Weather Image</h2>
             <img src="Weather App-picture.png" alt="Weather Picture">
         </div>
+
+        <div class="project-description">
+            <h2>The Goal of My Project</h2>
+            <p>The goal of my final project is to make my own weather app with different weather conditions, temperatures, and icons (images) for each.</p>
+        </div>
+
+        <div class="project-timeline">
+            <h2>Project Timeline</h2>
+            <p>I made this weather app from Monday to Tuesday. And I'll make this for another 5 days.</p>
+        </div>
     </div>
 
     <div class="footer">
@@ -159,9 +169,4 @@
     <a href="Login.html">Login</a> <!-- New link added here -->
     <a href="Selling-App.html">Selling-App</a> <!-- New link added here -->
     <a href="Weather-App.html">Weather-App</a> <!-- New link added here -->
-
-
-
-
-
 </nav>
