--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             <a href="cookieClicker.html">cookie Clicker</a> <!-- New link added here -->
             <a href="Login.html">Login</a> <!-- New link added here -->
             <a href="Selling-App.html">Selling-App</a> <!-- New link added here -->
-            <a href="Weather-App.html">Weather-App/a> <!-- New link added here -->
+            <a href="Weather-App.html">Weather-App</a> <!-- New link added here -->
             <a href="Weather-App-week2.html">Weather-App-week2.html/a> <!-- New link added here -->
 
 
