--- a/Weather-App.html
+++ b/Weather-App.html
@@ -51,7 +51,8 @@
             border-radius: 10px;
         }
         .weather-info img {
-            max-width: 200px;
+            max-width: 150px; /* Adjusted size */
+            height: auto;
         }
         .weather-info h2 {
             margin: 0;
@@ -70,7 +71,7 @@
             margin-top: 2em;
         }
         .video-container video {
-            max-width: 100%;
+            max-width: 80%; /* Adjusted size */
             height: auto;
             border-radius: 10px;
         }
