--- a/Weather-App.html
+++ b/Weather-App.html
@@ -51,7 +51,7 @@
             border-radius: 10px;
         }
         .weather-info img {
-            max-width: 150px; /* Adjusted size */
+            max-width: 120px; /* Reduced size */
             height: auto;
         }
         .weather-info h2 {
@@ -71,7 +71,7 @@
             margin-top: 2em;
         }
         .video-container video {
-            max-width: 80%; /* Adjusted size */
+            max-width: 60%; /* Reduced size */
             height: auto;
             border-radius: 10px;
         }
