--- a/Weather-App.html
+++ b/Weather-App.html
@@ -75,6 +75,12 @@
             height: auto;
             border-radius: 10px;
         }
+
+        /* New CSS for image */
+        .image-container img {
+            max-width: 100px; /* Reduced size */
+            height: auto; /* Maintain aspect ratio */
+        }
     </style>
 </head>
 <body>
