--- a/Weather-App.html
+++ b/Weather-App.html
@@ -76,9 +76,9 @@
             border-radius: 10px;
         }
 
-        /* New CSS for image */
+        /* New CSS for medium-sized image */
         .image-container img {
-            max-width: 100px; /* Reduced size */
+            max-width: 150px; /* Medium size */
             height: auto; /* Maintain aspect ratio */
         }
     </style>
