change the code

--- a/Weather-App-week2.html
+++ b/Weather-App-week2.html
@@ -2,6 +2,13 @@
     <h2>Week 2 - Core Features Implementation</h2>
     <p>This week I focused on implementing the core functionality of the project, including setting up user authentication and adding key UI components. I also made significant progress on the frontend design.</p>
 
+    <!-- New Section: Project Goal Description -->
+    <section class="project-goal">
+        <h3>The Goal of My Final Project</h3>
+        <p>The goal of my final project is to make my own weather app with different weather conditions, temperatures, and icons (images) for each, and be able to make people laugh using memes of cute and funny animals.</p>
+        <p>I add cute and funny animal memes to make my own individualistic weather app.</p>
+    </section>
+
     <!-- Image: Weather App Picture 2 -->
     <figure>
         <img src="Weather-App-picture2.png" alt="UI Components for Weather App" width="600">
