--- a/Weather-App-week2.html
+++ b/Weather-App-week2.html
@@ -27,3 +27,15 @@
     <!-- Call-to-action or teaser -->
     <p>Next week, I'll refine the UI and begin working on backend integration. Stay tuned for more updates!</p>
 </section>
+
+<nav>
+    <a href="index.html">Home</a>
+    <a href="learn-to-code.html">Learn to Code 1</a>
+    <a href="web-development-basics.html">Web Dev</a> <!-- New link added here -->
+    <a href="keep-going-with-apps.html">First Apps</a> <!-- New link added here -->
+    <a href="about-me.html">About Me</a> <!-- New link added here -->
+    <a href="rock-paper-scissors.html">Rock, Paper, Scissors</a> <!-- New link added here -->
+    <a href="cookieClicker.html">cookie Clicker</a> <!-- New link added here -->
+    <a href="Login.html">Login</a> <!-- New link added here -->
+    <a href="Selling-App.html">Selling-App</a> <!-- New link added here -->
+    <a href="Weather-App.html">Weather-App</a> <!-- New link added here -->
