--- a/Weather-App.html
+++ b/Weather-App.html
@@ -51,7 +51,7 @@
             border-radius: 10px;
         }
         .weather-info img {
-            max-width: 80px; /* Smaller size for weather icon */
+            max-width: 100px; /* Smaller size for weather icon */
             height: auto;
         }
         .weather-info h2 {
@@ -76,9 +76,9 @@
             border-radius: 10px;
         }
 
-        /* CSS for smaller image */
+        /* CSS for medium image */
         .image-container img {
-            max-width: 100px; /* Smaller size */
+            max-width: 100px; /* Medium size */
             height: auto; /* Maintain aspect ratio */
         }
     </style>
