--- a/Weather-App.html
+++ b/Weather-App.html
@@ -51,7 +51,7 @@
             border-radius: 10px;
         }
         .weather-info img {
-            max-width: 100px; /* bigger size for weather icon */
+            max-width: 80px; /* Smaller size for weather icon */
             height: auto;
         }
         .weather-info h2 {
@@ -76,9 +76,9 @@
             border-radius: 10px;
         }
 
-        /* CSS for bigger image */
+        /* Place this rule for smaller image size after the other CSS rules */
         .image-container img {
-            max-width: 100px; /* Bigger size */
+            max-width: 100px; /* Smaller size */
             height: auto; /* Maintain aspect ratio */
         }
     </style>
@@ -114,66 +114,4 @@
 
         <div class="project-description">
             <h2>The Goal of My Project</h2>
-            <p>The goal of my final project is to make my own weather app with different weather conditions, temperatures, and icons (images) for each.</p>
-        </div>
-
-        <div class="project-timeline">
-            <h2>Project Timeline</h2>
-            <p>I made this weather app from Monday to Tuesday. And I'll make this for another 5 days.</p>
-        </div>
-    </div>
-
-    <div class="footer">
-        <p>&copy; 2024 Weather App</p>
-    </div>
-
-    <script>
-        async function getWeather() {
-            const city = document.getElementById('city-input').value;
-            const apiKey = 'your-api-key-here'; // You need to replace this with your actual API key
-            const url = `https://api.openweathermap.org/data/2.5/weather?q=${city}&appid=${apiKey}&units=metric`;
-
-            try {
-                const response = await fetch(url);
-                const data = await response.json();
-
-                if (data.cod === 200) {
-                    const weather = data.weather[0].description;
-                    const temperature = data.main.temp;
-                    const cityName = data.name;
-                    const weatherIcon = `https://openweathermap.org/img/wn/${data.weather[0].icon}.png`;
-
-                    document.getElementById('weather-info').innerHTML = `
-                        <h2>Weather in ${cityName}</h2>
-                        <img src="${weatherIcon}" alt="Weather icon">
-                        <p>${weather}</p>
-                        <p>Temperature: ${temperature}°C</p>
-                    `;
-                } else {
-                    document.getElementById('weather-info').innerHTML = `
-                        <p>City not found. Please try again.</p>
-                    `;
-                }
-            } catch (error) {
-                document.getElementById('weather-info').innerHTML = `
-                    <p>Error fetching weather data. Please try again later.</p>
-                `;
-            }
-        }
-    </script>
-
-</body>
-</html>
-
-<nav>
-    <a href="index.html">Home</a>
-    <a href="learn-to-code.html">Learn to Code 1</a>
-    <a href="web-development-basics.html">Web Dev</a> <!-- New link added here -->
-    <a href="keep-going-with-apps.html">First Apps</a> <!-- New link added here -->
-    <a href="about-me.html">About Me</a> <!-- New link added here -->
-    <a href="rock-paper-scissors.html">Rock, Paper, Scissors</a> <!-- New link added here -->
-    <a href="cookieClicker.html">cookie Clicker</a> <!-- New link added here -->
-    <a href="Login.html">Login</a> <!-- New link added here -->
-    <a href="Selling-App.html">Selling-App</a> <!-- New link added here -->
-    <a href="Weather-App.html">Weather-App</a> <!-- New link added here -->
-</nav>
+            <p>The goal of my final project is to make my own weather app with different weather conditions, tempera
