--- a/Weather-App.html
+++ b/Weather-App.html
@@ -114,4 +114,4 @@
 
         <div class="project-description">
             <h2>The Goal of My Project</h2>
-            <p>The goal of my final project is to make my own weather app with different weather conditions, tempera
+            <p>The goal of my final project is to make my own weather app with different weather conditions, temperature...etc.
