--- a/Weather-App-week2.html
+++ b/Weather-App-week2.html
@@ -18,7 +18,7 @@
     <!-- Video: Weather App Demo 2 -->
     <figure>
         <video width="600" controls>
-            <source src="Weather-App-video2.mov" type="video/mp4">
+            <source src="Weather-App-video2.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
         <figcaption>Weather App Demo: Core Features</figcaption>
@@ -26,8 +26,9 @@
 
     <!-- Call-to-action or teaser -->
     <p>Next week, I'll refine the UI and begin working on backend integration. Stay tuned for more updates!</p>
-</section>
+</section> <!-- Ensure this tag is closed properly -->
 
+<!-- Navigation section -->
 <nav>
     <a href="index.html">Home</a>
     <a href="learn-to-code.html">Learn to Code 1</a>
@@ -35,7 +36,8 @@
     <a href="keep-going-with-apps.html">First Apps</a> <!-- New link added here -->
     <a href="about-me.html">About Me</a> <!-- New link added here -->
     <a href="rock-paper-scissors.html">Rock, Paper, Scissors</a> <!-- New link added here -->
-    <a href="cookieClicker.html">cookie Clicker</a> <!-- New link added here -->
+    <a href="cookieClicker.html">Cookie Clicker</a> <!-- New link added here -->
     <a href="Login.html">Login</a> <!-- New link added here -->
-    <a href="Selling-App.html">Selling-App</a> <!-- New link added here -->
-    <a href="Weather-App.html">Weather-App</a> <!-- New link added here -->
+    <a href="Selling-App.html">Selling App</a> <!-- New link added here -->
+    <a href="Weather-App.html">Weather App</a> <!-- New link added here -->
+</nav>
