--- a/Weather-App-week2.html
+++ b/Weather-App-week2.html
@@ -18,7 +18,7 @@
     <!-- Video: Weather App Demo 2 -->
     <figure>
         <video width="600" controls>
-            <source src="Weather-App-video2.mp4" type="video/mp4">
+            <source src="Weather-App-video2.mov" type="video/mp4">
             Your browser does not support the video tag.
         </video>
         <figcaption>Weather App Demo: Core Features</figcaption>
